# tkmachina

./: README.md  pyproject.toml  run-tests.bat  zoo-project.json
db/: rules.md  tasks.md
docs/: model.md
docs/architecture/: tkmachina-discussion-docket.md
docs/architecture/decisions/: ADR-0001-runtime-cycle.md  ADR-0002-castle-hierarchy.md  ADR-0003-replacement-dynamic-rebuild.md  ADR-0004-associate-state-boundaries.md  ADR-0005-addressing-scoping.md  ADR-0006-message-semantics.md  ADR-0007-serializable-build-specs.md  ADR-0008-lifecycle-hooks.md  ADR-0009-runtime-scheduling.md  ADR-0010-test-harness.md  ADR-0011-event-interest-filtering.md  ADR-0012-spots-and-placements-for-castle-layout.md  ADR-0013-scheduled-mutations-execute-as-ordered.md  ADR-0014-associate-observed-state-contract.md  (+1 more)
docs/code/: build-process.md  build-request.md  build-template.md  known-identities.md
docs/manual/: api-reference.md  associate-reference.md  associates.md  builds.md  castles.md  concepts-associates.md  concepts.md  glossary.md  index.md  routes-and-messages.md  runtime-cycle.md  spots.md  why-tkmachina.md
docs/manual-html/: associate-reference.html  concepts-associates.html  glossary.html  index.html  styles.css  why.html
examples/: associates.py  button_assistant_demo.py  entry_inner_castle_demo.py  rt.py
guitests/: test_entry_associate_hosted.py  test_entry_observed_hosted.py  test_frame_associate_hosted.py  test_label_frame_associate_hosted.py  test_runtime_hosted.py
src/tkmachina/: associates.py  rt.py
tests/: run_runtime_invariants.py
