[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tkmachina"
version = "0.1.0"
description = "A tiny runtime for Little Castles-style Tkinter construction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tkintertester>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
